--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Supermarket</title>
     <link rel="stylesheet" href="sitePart1.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css.map">
 </head>
 
 <body>
-
-
-
     <header class="">
-        <nav class="container-fluid ">
+        <nav class="container-fluid align-items-center text-center mom img-fluid">
             <div class="non-mt">
-                <a href="#"> home</a>
-                <a href="#">abut us</a>
-                <a href="#">contact </a>
-                <a href="#">products</a>
+               <img src="h22.png" width="80px">
+                <a href="#"> Home</a>
+                <a href="#">Abut us</a>
+                <a href="#">Contact </a>
+                <a href="#">Products</a>
+                
             </div>
         </nav>
     </header>
@@ -29,38 +28,26 @@
     <p>
     <div class="container-fluid align-items-center text-center">
         <h1>
-            welcome to soper merkt
+            Welcome to supermarket
         </h1>
     </div>
     <div class="container-fluid align-items-center text-center matn-l">
-
-        <div class="col-12 p-5 bg-warning"></div>
-        <div class="col-12 p-2 bg-warning"></div>
-        <br>
-        <div class="col-12 p-5 bg-success"></div>
-        <div class="col-12 p-2 bg-success"></div>
-        <br>
-        <div class="col-12 p-5 bg-primary"></div>
-        <div class="col-12 p-2 bg-primary"></div>
+        <div><img src="hl11.jpg" width="1200px"></div>
     </div>
     <div class="container-fluid align-items-center text-center">
         <h2>
-            thank you and good luck <br> tell us about an experience
+            Thank you and good luck <br> Tell us about an experience
         </h2>
     </div>
     </p>
-
-    <div class="container-fluid align-items-center text-center ">
-        <footer class="">
-
-            <div class="momr-n">
+      <footer class="">
+         <div class="container-fluid align-items-center text-center momr-n ">
                 <a href="">instergrm</a>
                 <a href="">facbook</a>
                 <a href="">likdin</a>
                 <a href="">yotub</a>
-            </div>
-        </footer>
-    </div>
+          </div>  
+     </footer>
 </body>
 
 </html>
