Neat picture and neat text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <a href="#">Abut us</a>
                 <a href="#">Contact </a>
                 <a href="#">Products</a>
-                
             </div>
         </nav>
     </header>
@@ -31,9 +30,24 @@
             Welcome to supermarket
         </h1>
     </div>
+    <div class="col-12 bg-secondary p-3"></div>
     <div class="container-fluid align-items-center text-center matn-l">
-        <div><img src="hl11.jpg" width="1200px"></div>
+        <div class="byb"><img src="hl11.jpg" width="600px">
+          <div class="container">
+            <h2>
+                We use special technology that helps the customers,<br> and thus they get a good,
+                 fast and reliable escort and are very satisfied with us,<br>
+                  and we are happy about that,<br> and always want to improve technology,
+                   service, <br> and satisfied customers.
+                   We use special technology that helps the customers,<br> and thus they get a good,
+                   fast and reliable escort and are very satisfied with us,<br>
+                    and we are happy about that,<br> and always want to improve technology,
+                     service, <br> and satisfied customers.
+            </h2>
+         </div>
+        </div>
     </div>
+    <div class="col-12 bg-secondary p-3"></div>
     <div class="container-fluid align-items-center text-center">
         <h2>
             Thank you and good luck <br> Tell us about an experience
@@ -42,10 +56,10 @@
     </p>
       <footer class="">
          <div class="container-fluid align-items-center text-center momr-n ">
-                <a href="">instergrm</a>
-                <a href="">facbook</a>
-                <a href="">likdin</a>
-                <a href="">yotub</a>
+                <a href="">Instagram</a>
+                <a href="">Facebook</a>  
+                <a href="">LinkedIn</a>
+                <a href="">YouTube</a>
           </div>  
      </footer>
 </body>
