--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Supermarket</title>
-    <link rel="stylesheet" href="sitePart1.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css.map">
 </head>
 
 <body>
     <header class="">
-        <nav class="container-fluid align-items-center text-center mom img-fluid">
+        <nav class="container-fluid align-items-center text-center mom ">
             <div class="non-mt">
-               <img src="h22.png" width="80px">
+               <img src="img/h22.png" width="80px">
                 <a href="#"> Home</a>
                 <a href="#">Abut us</a>
-                <a href="#">Contact </a>
+                <a href="html/Contact.html">Contact </a>
                 <a href="#">Products</a>
             </div>
         </nav>
@@ -32,20 +33,21 @@
     </div>
     <div class="col-12 bg-secondary p-3"></div>
     <div class="container-fluid align-items-center text-center matn-l">
-        <div class="byb"><img src="hl11.jpg" width="600px">
+     <div class="byb"><img src="img/hl11.jpg" width="600px">
           <div class="container">
             <h2>
-                We use special technology that helps the customers,<br> and thus they get a good,
-                 fast and reliable escort and are very satisfied with us,<br>
-                  and we are happy about that,<br> and always want to improve technology,
-                   service, <br> and satisfied customers.
-                   We use special technology that helps the customers,<br> and thus they get a good,
-                   fast and reliable escort and are very satisfied with us,<br>
-                    and we are happy about that,<br> and always want to improve technology,
-                     service, <br> and satisfied customers.
+                We use special technology that helps the customers, and thus they get a good,
+                fast and reliable escort and are very satisfied with us,
+                and we are happy about that, and always want to improve technology,
+                service,  and satisfied customers.
+                We use special technology that helps the customers, and thus they get a good,
+                fast and reliable escort and are very satisfied with us,
+                and we are happy about that, and always want to improve technology,
+                service,  and satisfied customers. We hope you enjoy our service and have
+                a fun runia and good products for anything to improve we would be happy do
             </h2>
          </div>
-        </div>
+     </div>
     </div>
     <div class="col-12 bg-secondary p-3"></div>
     <div class="container-fluid align-items-center text-center">
@@ -54,6 +56,9 @@
         </h2>
     </div>
     </p>
+    <div class="footer">
+
+    </div>
       <footer class="">
          <div class="container-fluid align-items-center text-center momr-n ">
                 <a href="">Instagram</a>
