Construction of all pages

--- a/html/Contact.html
+++ b/html/Contact.html
@@ -7,6 +7,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../css/Contact.css">
 </head>
 
 <body>
@@ -15,9 +16,9 @@
             <div class="non-mt">
                <img src="../img/h22.png" width="80px">
                 <a href="../index.html"> Home</a>
-                <a href="#">Abut us</a>
-                <a href="#">Contact </a>
-                <a href="#">Products</a>
+                <a href="../html/AbutUs.html">Abut us</a>
+                <a href="../html/Contact.html">Contact </a>
+                <a href="../html/Products.html">Products</a>
             </div>
         </nav>
     </header>
@@ -25,8 +26,32 @@
         <h1>
             Contact Us Form
         </h1>
-     </div>
-     <div class="container-fluid align-items-center text-center ">
+    </div>
+     <div class="align-items-center text-center container-md globl">
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Obcaecati pariatur labore dolores, aut iste numquam sit,
+          suscipit nobis cum illum beatae quis fuga accusamus
+           reprehenderit commodi aspernatur! Quasi, magni ab.</p></div>
+           <div class="align-items-center text-center">
+           <h2>Get in touch</h2>
+           <p class="iead">Tell us whan's on your mind</p>
+        </div>
+        <div class="col-4">
+            <form >
+            <label class="form-label" for="nameField" >Your name</label>
+            <input class="form-control" type="text" id="nameField" >
+            <label class="form-label" for="emailField" >Your email</label>
+            <input class="form-control" type="email" id="emailField" > 
+            <label for="query" class="form-label"> Your query</label>
+            <textarea class="form-control" id="query"></textarea>   
+            <div class="text-conter  mt-4">
+                <button type="submit" class="btn btn-secondary">Submit</button>
+            </div>
+        </form>
+
+
+        </div>
+     <!--<div class="container-fluid align-items-center text-center ">
      <form action="tanks.html">
         <div class="bax2">
          <label> Full name</label><br>
@@ -42,17 +67,15 @@
      </form>
     <p></p>
 </div>
-
-<script >
-function changeColor(){
+ <script >
+ function changeColor(){
     var user = document.forme.userc.value;
     document.bgColor = user;
-}
-
-</script>
-<br>
-<br>
-</div>
+ }
+ </script>
+ <br>
+ <br>
+ </div> -->
 <div class="footer"></div>
     <footer class="">
         <div class="container-fluid align-items-center text-center momr-n ">
