--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav class="container-fluid align-items-center text-center mom ">
             <div class="non-mt">
                <img src="img/h22.png" width="80px">
-                <a href="#"> Home</a>
-                <a href="#">Abut us</a>
+                <a href="index.html"> Home</a>
+                <a href="/html/AbutUs.html">Abut us</a>
                 <a href="html/Contact.html">Contact </a>
-                <a href="#">Products</a>
+                <a href="/html/Products.html">Products</a>
             </div>
         </nav>
     </header>
