I updated about us

--- a/html/AbutUs.html
+++ b/html/AbutUs.html
@@ -7,6 +7,7 @@
     <title>Abut us</title>
     <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/abutUs.css">
 </head>
 <body>
     <header class="">
@@ -20,7 +21,34 @@
             </div>
         </nav>
     </header>
-<p>my nema hg,jhgfbjihnb</p>
+    <div class="m-2 text-center">
+       <h1> Looking for business solutions</h1>
+    </div>
+    <div class="col m-3"></div>
+    <div class="container p-3 bg-dark mt-3 iml">
+       <div class="row">
+         <div class="col-4">
+            <img src="../img/abut1.jpg" class="img-fluid" alt="">
+         </div>
+         <div class="col-2">Show an example of why you need an online store</div>
+         <div class="col-4">
+            <img src="../img/abut2.jpg" class="img-fluid">
+         </div>
+         <div class="col-2">And you don't have to spend a lot of money on the design of the store</div>
+       </div>
+    </div>
+    <div class="container p-3 bg-dark mt-3 iml">
+        <div class="row">
+    <div class="col-2">We also have solutions for such large businesses</div>
+    <div class="col-4 ">
+        <img src="../img/abut3.jpg" class="img-fluid">
+    </div>
+    <div class="col-2">Even for a pet store we know how to answer</div>
+    <div class="col-4">
+        <img src="/img/abut4.jpg" class="img-fluid">
+    </div>
+    </div>
+     </div>
     <div class="footer"></div>
     <footer class="">
         <div class="container-fluid align-items-center text-center momr-n ">
