--- a/html/Contact.html
+++ b/html/Contact.html
@@ -22,35 +22,35 @@
             </div>
         </nav>
     </header>
-     <div class="container-fluid align-items-center text-center  ">
+     <div class="container-fluid container-md globl">
         <h1>
             Contact Us Form
         </h1>
     </div>
-     <div class="align-items-center text-center container-md globl">
+     <div class=" container-fluid container globl">
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
          Obcaecati pariatur labore dolores, aut iste numquam sit,
           suscipit nobis cum illum beatae quis fuga accusamus
            reprehenderit commodi aspernatur! Quasi, magni ab.</p></div>
-           <div class="align-items-center text-center">
+           <div class=" text-center   ">
            <h2>Get in touch</h2>
            <p class="iead">Tell us whan's on your mind</p>
         </div>
-        <div class="col-4">
-            <form >
+        <div class=" container-fluid  globl col-6 ">
+         <form >
             <label class="form-label" for="nameField" >Your name</label>
             <input class="form-control" type="text" id="nameField" >
             <label class="form-label" for="emailField" >Your email</label>
             <input class="form-control" type="email" id="emailField" > 
             <label for="query" class="form-label"> Your query</label>
             <textarea class="form-control" id="query"></textarea>   
-            <div class="text-conter  mt-4">
+            <div class="text-conter p-3 mt-4">
                 <button type="submit" class="btn btn-secondary">Submit</button>
             </div>
-        </form>
+         </form> 
 
 
-        </div>
+      </div> 
      <!--<div class="container-fluid align-items-center text-center ">
      <form action="tanks.html">
         <div class="bax2">
