Opening a js file to replace the header

--- a/html/Contact.html
+++ b/html/Contact.html
@@ -11,17 +11,8 @@
 </head>
 
 <body>
-     <header class="">
-        <nav class="container-fluid align-items-center text-center mom img-fluid ">
-            <div class="non-mt">
-               <img src="../img/h22.png" width="80px">
-                <a href="../index.html"> Home</a>
-                <a href="../html/AbutUs.html">Abut us</a>
-                <a href="../html/Contact.html">Contact </a>
-                <a href="../html/Products.html">Products</a>
-            </div>
-        </nav>
-    </header>
+    <special-header></special-header> 
+     
      <div class="container-fluid container-md globl">
         <h1>
             Contact Us Form
@@ -44,20 +35,16 @@
             <input class="form-control" type="email" id="emailField" > 
             <label for="query" class="form-label"> Your query</label>
             <textarea class="form-control" id="query"></textarea>   
-            <div class="text-conter p-3 mt-4">
+            <div class="text-conter  mt-4">
                 <button type="submit" class="btn btn-secondary">Submit</button>
             </div>
          </form> 
+         <div class="col-12 ny"></div>
       </div> 
      
-<div class="footer"></div>
-    <footer class="">
-        <div class="container-fluid align-items-center text-center momr-n ">
-               <a href="">Instagram</a>
-               <a href="">Facebook</a>  
-               <a href="">LinkedIn</a>
-               <a href="">YouTube</a>
-         </div>  
-    </footer>
+
+    <special-footer></special-footer>
+    <link rel="stylesheet" href="/bootstrap/bootstrap.min.js"> 
+    <script src="/JavaScript/headerFooter.js" ></script>
 </body>
 </html>
