--- a/html/Products.html
+++ b/html/Products.html
@@ -9,26 +9,11 @@
     <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
 </head>
 <body>
-    <header class="">
-        <nav class="container-fluid align-items-center text-center mom img-fluid ">
-            <div class="non-mt">
-               <img src="../img/h22.png" width="80px">
-                <a href="../index.html"> Home</a>
-                <a href="../html/AbutUs.html">Abut us</a>
-                <a href="../html/Contact.html">Contact </a>
-                <a href="/html/Products.html">Products</a>
-            </div>
-        </nav>
-    </header>
+    <special-header></special-header> 
 
-    <div class="footer"></div>
-    <footer class="">
-        <div class="container-fluid align-items-center text-center momr-n ">
-               <a href="">Instagram</a>
-               <a href="">Facebook</a>  
-               <a href="">LinkedIn</a>
-               <a href="">YouTube</a>
-         </div>  
-    </footer>
+    
+    <special-footer></special-footer>
+    <link rel="stylesheet" href="/bootstrap/bootstrap.min.js"> 
+    <script src="/JavaScript/headerFooter.js" ></script>
 </body>
 </html>
