Finish editing json

--- a/html/Products.html
+++ b/html/Products.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-    <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
-</head>
-<body>
-    <special-header></special-header> 
+    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../css/products.css">
+    <script src="/JQUERY/codeJquery.3.7.0.min.js"> </script>
 
+</head>
+
+<body>
+    <script src="/JavaScript/headerFooter.js"></script>
+    <script type="module" src="/JavaScript/prodcuts/app.js"></script>
+    <special-header></special-header>
+    <div class="container">
+        <nav class="bg-dark text-white">nav</nav>
+        <main>
+            <h2></h2>
+            <div class="row" id="row">
+                <!-- <div class="col-lg-6 border  ">
+                     <img src="https://cdn.pixabay.com/photo/2018/07/21/09/17/cat-3552143_150.jpg"
+                          class=" float-left mr-2" style="max-width: 100%">
+                            <h2>caty</h2>
+                            <div>
+                                compony:
+                            </div>
+                </div> -->
+            </div>
+        </main>
+    </div>
     <special-footer></special-footer>
-    <link rel="stylesheet" href="/bootstrap/bootstrap.min.js"> 
-    <script src="/JavaScript/headerFooter.js" ></script>
+
 </body>
+
 </html>
