--- a/html/Products.html
+++ b/html/Products.html
@@ -17,8 +17,18 @@
     <script src="/JavaScript/headerFooter.js"></script>
     <script type="module" src="/JavaScript/prodcuts/app.js"></script>
     <special-header></special-header>
-    <div class="container">
-        <nav class="bg-dark text-white">nav</nav>
+    <div class="container ">
+            <div class="d-flex m-2 "> 
+                <input type="text" class="form-control spacious ">
+                <button type="submit" class="spacious">Submit</button>
+                <select class="spacious form-control ">
+                    <option value="">Tools </option>
+                    <option value="">game </option>
+                    <option value="">kitchen </option>
+
+                </select>
+            </div>
+
         <main>
             <h2></h2>
             <div class="row" id="row">
@@ -33,6 +43,7 @@
             </div>
         </main>
     </div>
+
     <special-footer></special-footer>
 
 </body>
