I finished button plus filter

--- a/html/Products.html
+++ b/html/Products.html
@@ -17,16 +17,25 @@
     <script src="/JavaScript/headerFooter.js"></script>
     <script type="module" src="/JavaScript/prodcuts/app.js"></script>
     <special-header></special-header>
-    <div class="container ">
-            <div class="d-flex m-2 "> 
-                <input type="text" class="form-control spacious ">
-                <button type="submit" class="spacious">Submit</button>
-                <select class="spacious form-control ">
-                    <option value="">Tools </option>
-                    <option value="">game </option>
-                    <option value="">kitchen </option>
-
-                </select>
+    <div class="container">
+            <div class=" m-2 " > 
+                <div class="input-search  w-100" style="display: flex;">
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                      </svg> -->
+                    <input type="text" class="form-control" id="">
+                    <!-- <button type="submit" class="spacious" id="submit" >Submit</button>   -->
+                    <button type="submit" class="spacious input-search dd" id="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                         </svg>
+                      </button>
+                    <select class=" form-control " id="sdmit">
+                        <option value="tools">tools </option>
+                        <option value="game">game</option>
+                        <option value="kitchen">kitchen </option>
+                    </select>
+                </div>
             </div>
 
         <main>
